// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AllLoveTypesSection Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa eKALTN"
    >
      <button
        className="sc-EHOje fifNWy"
        onClick={[Function]}
      >
        その他の恋愛タイプを表示する
      </button>
      <ul
        className="sc-bwzfXH tMvbP"
      />
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Footer Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bZQynM kRgCUI"
    >
      Copyright (c) 2020 nekochans
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-gzVnrw jidZVM"
    >
      愛の心理学
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Home Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-htoDjs dyAFYh"
    >
      <div
        className="sc-dnqmqq jUDdfj"
      >
        <div
          className="sc-iwsKbI ccUtVV"
        >
          <h2
            className="sc-gZMcBi ijYmDA"
          >
            愛の三角理論
          </h2>
          <p
            className="sc-gqjmRU eEghnq"
          >
            愛の三角形理論についての解説を追加する。
          </p>
          <p
            className="sc-gqjmRU eEghnq"
          >
            1行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-gqjmRU eEghnq"
          >
            2行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-gqjmRU eEghnq"
          >
            3行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-gqjmRU eEghnq"
          >
            4行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
        </div>
        <div
          className="sc-jTzLTM lRlLU"
        >
          <div
            className="sc-VigVT bHPiAu"
          >
            <div>
              <h3
                className="sc-fjdhpX ifbuak"
              >
                親密性（intimacy）
              </h3>
              <p
                className="sc-jzJRlG iCeOCJ"
              >
                親密性についての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
          <div
            className="sc-VigVT bHPiAu"
          >
            <div>
              <h3
                className="sc-fjdhpX ifbuak"
              >
                情熱（passion）
              </h3>
              <p
                className="sc-jzJRlG iCeOCJ"
              >
                情熱についての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
          <div
            className="sc-VigVT bHPiAu"
          >
            <div>
              <h3
                className="sc-fjdhpX ifbuak"
              >
                コミットメント（commitment）
              </h3>
              <p
                className="sc-jzJRlG iCeOCJ"
              >
                コミットメントについての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
        </div>
      </div>
      <a
        className="sc-cSHVUG kBSkYT"
        href="/analysis"
        onClick={[Function]}
      >
        <span>
          診断する！
        </span>
      </a>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Loading Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <h3
      className="sc-kAzzGY gSBUVo"
    >
      Loading...
    </h3>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots NextButton Show Disable 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="sc-kAzzGY hqIJNa"
      disabled={true}
    >
      次へ進む
    </button>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots NextButton Show Enable 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="sc-kAzzGY fnzXcl"
      disabled={false}
    >
      次へ進む
    </button>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots QuestionList Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="sc-kgoBCf gEGBBN"
    >
      <li
        className="sc-kGXeez deKNnV"
      >
        <div
          name="1"
        >
          <p
            className="sc-chPdSV iIITck"
          >
            Q
            1
            . 
            私にとって○○さんとの関係よりも大切なものなど他にはない
          </p>
          <fieldset
            className="sc-kpOJdX OavVn"
          >
            <ul
              className="sc-dxgOiQ cmvnKo"
            >
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={true}
                  className="sc-jKJlTe cUmqxr"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="1"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="1"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="1"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="1"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="1"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-kGXeez deKNnV"
      >
        <div
          name="2"
        >
          <p
            className="sc-chPdSV iIITck"
          >
            Q
            2
            . 
            私と○○さんとの関わりは揺るぎないものである
          </p>
          <fieldset
            className="sc-kpOJdX OavVn"
          >
            <ul
              className="sc-dxgOiQ cmvnKo"
            >
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="2"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={true}
                  className="sc-jKJlTe cUmqxr"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="2"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="2"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="2"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="2"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-kGXeez deKNnV"
      >
        <div
          name="3"
        >
          <p
            className="sc-chPdSV iIITck"
          >
            Q
            3
            . 
            ○○さんは私にとって非常に魅力的な人だ
          </p>
          <fieldset
            className="sc-kpOJdX OavVn"
          >
            <ul
              className="sc-dxgOiQ cmvnKo"
            >
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="3"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="3"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="3"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="3"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="3"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-kGXeez deKNnV"
      >
        <div
          name="4"
        >
          <p
            className="sc-chPdSV iIITck"
          >
            Q
            4
            . 
            ○○さんとの関係は居心地のよいものである
          </p>
          <fieldset
            className="sc-kpOJdX OavVn"
          >
            <ul
              className="sc-dxgOiQ cmvnKo"
            >
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="4"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="4"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="4"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="4"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="4"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-kGXeez deKNnV"
      >
        <div
          name="5"
        >
          <p
            className="sc-chPdSV iIITck"
          >
            Q
            5
            . 
            ○○さんについて空想にふけることがある
          </p>
          <fieldset
            className="sc-kpOJdX OavVn"
          >
            <ul
              className="sc-dxgOiQ cmvnKo"
            >
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="5"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="5"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="5"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="5"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-ckVGcZ jXqYmh"
              >
                <label
                  checked={false}
                  className="sc-jKJlTe kQbVrh"
                >
                  <input
                    className="sc-hMqMXs eSemHE"
                    name="5"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-eNQAEJ eoSfYn"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
    </ul>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots ResultSection Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-kEYyzF dBvYTS"
    >
      <p
        className="sc-kkGfuU OFveG"
      >
        あなたの恋人や片思いの人への愛の形は
      </p>
      <div
        className="sc-iAyFgw drZXZx"
      >
        <h3
          className="sc-hSdWYo bPNknF"
        >
          非愛タイプ
        </h3>
        <p
          className="sc-eHgmQL dXFVLj"
        >
          全ての要素が足りない。表面的な人間関係
        </p>
        <p
          className="sc-eHgmQL dXFVLj"
        >
          恋愛タイプに関するメッセージ等を記載する。あああああああああああああああああああああああああああああああああああああああああああああああ。
        </p>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
